log/build_2021-12-10_12-10-54/main/stderr.log
  File "/home/ubuntu/ws/Libero/install/main/lib/python3.8/site-packages/python_programs/main.py", line 238
    if msg.
          ^
SyntaxError: invalid syntax

